==> META-MCU/st7735s-tft-0.96inch/code/GD32E230/LCD_ST7735S.c <==
#include "gd32e23x.h"
#include "LCD_ST7735S.h"
#include "font.h"
#include "hz_16x16.h"
#include "hz_32x32.h"
#include "systick.h"

void lcdGpioInit(void)
{
    rcu_periph_clock_enable(LCD_RCU); //打开LCD(RCU_GPIOB)时钟
	
	gpio_mode_set(LCD_PORT, GPIO_MODE_OUTPUT, GPIO_PUPD_PULLUP, LCD_PIN_CS | LCD_PIN_RES | LCD_PIN_A0 | LCD_PIN_SDA | LCD_PIN_SCK); //将LCD_CS/LCD_A0/LCD_RST/LCD_SDA/LCD_SCK输出模式，设置上拉
	gpio_output_options_set(LCD_PORT, GPIO_OTYPE_PP, GPIO_OSPEED_50MHZ, LCD_PIN_CS | LCD_PIN_RES | LCD_PIN_A0 | LCD_PIN_SDA | LCD_PIN_SCK); // 将LCD_CS/LCD_A0/LCD_RST/LCD_SDA/LCD_SCK配置为推挽模式，最高支持50MHz
}

void lcdSelectRegister(unsigned char data)
{
    CLR_LCD_A0;
    CLR_LCD_CS;
 
    for(int i = 0; i < 8; i++)
    {
        if(data & 0x80)
        {
            SET_LCD_SDA;
        }
        else 
        {
            CLR_LCD_SDA;
        }
        CLR_LCD_SCK;
        SET_LCD_SCK;
        data = data << 1;
    }	 
    SET_LCD_CS;
}

void lcdWriteDataU8(unsigned char data)
{
    SET_LCD_A0;
    CLR_LCD_CS;

    for(int i = 0; i < 8; i++)
    {
        if( data & 0x80 )
        {
            SET_LCD_SDA;
        }
        else 
        {
            CLR_LCD_SDA;
        }
        CLR_LCD_SCK;
        SET_LCD_SCK;
        data = data << 1;
    }
    SET_LCD_CS;
}
